--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<meta name="viewport" content="CV professionnel d'Augustin Lestelle">
+	<title>Augustin Lestelle CV</title>
 	<link rel="stylesheet" href="styles/style_cv.css">
 	<script src="https://kit.fontawesome.com/b0a30ca8cb.js" crossorigin="anonymous"></script>
 </head>
